# bekenntnis

./: Cargo.toml  README.md  Rocket.toml
migrations/2021-05-14-093248_table_bekenntnis/: down.sql  up.sql
src/: dbpool.rs  main.rs  models.rs  routes.rs  schema.rs  template.rs
static/: scripts.js  styles.css
templates/: home.html
