[package]
name = "bekenntnis"
version = "0.1.0"
authors = ["kodeaffe <lahi+kodeaffe@posteo.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { git = "https://github.com/SergioBenitez/Rocket", version = "0.5.0-dev" }
failure = {version = "0.1.8", features = ["derive"] }
