[package]
name = "bekenntnis"
version = "0.2.0"
authors = ["kodeaffe <lahi+kodeaffe@posteo.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { git = "https://github.com/SergioBenitez/Rocket", version = "0.5.0-dev" }
failure = {version = "0.1.8", features = ["derive"] }
diesel = { version = "1.4.5", features = ["postgres"] }
serde = { version = "1.0.123", features = ["derive"] }
dotenv = "0.15.0"

[dependencies.rocket_contrib]
git = "https://github.com/SergioBenitez/Rocket"
version = "0.5.0-dev"
default-features = false
features=["json", "diesel_postgres_pool"]
